# LED_Panel_Controller

./: .gitignore  README.md  bugs.md  pyproject.toml  setup.md
config/: config.example.yaml  config.yaml.example
deploy/: README.md  emergency-restart-watchdog.sh  led-panel-controller.service  led-panel-controller.service.example  led-panel-emergency-restart.env.example  led-panel-emergency-restart.service  led-panel-emergency-restart.service.example  restart-controller.sh
homeassistant/: README.md  lovelace_example.yaml
led_controller/: __init__.py  __main__.py  commands.py  config.py  controller.py  mqtt_interface.py  process_manager.py  relay.py  state_machine.py  transition_manager.py
programs/: idle.py  matrix_options.py  matrix_program.py  shutdown.py  transition.py
tests/: conftest.py  test_config.py  test_controller.py  test_mqtt_interface.py  test_process_manager.py  test_relay.py  test_state_machine.py  test_transition_manager.py
tests/maunual_relay_controll/: manual_relay_off.sh  manual_relay_on.sh
