[project]
name = "led-controller"
version = "0.1.0"
description = "State-machine-driven controller for an LED matrix display on a Raspberry Pi"
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt>=2.0",
    "PyYAML>=6.0",
    "gpiozero>=2.0",
    "lgpio>=0.2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
led-controller = "led_controller.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["led_controller*"]
